Improved floating banner responsiveness Addeed media queries to avoid overflow on mobile devices

--- a/src/components/FloatingBanner/FloatingBanner.css
+++ b/src/components/FloatingBanner/FloatingBanner.css
@@ -4,13 +4,14 @@
     flex-direction: row;
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    right: 10px;
     z-index: 3;
     max-width: 450px;
     align-items: center;
     overflow: hidden;
     opacity: 1;
     visibility: visible;
+    margin-left: 10px;
 }
 .floating-banner.hide{
     transition: opacity 0.3s, visibility 0.3s, display 0.3s;
@@ -35,14 +36,14 @@
 }
 
 .floating-banner .floating-banner-paragraph p{
-    font-size: 1rem;
+    font-size: 0.9rem;
     max-height: calc(100px - 2em);
     overflow: hidden;
 }
 .floating-banner .floating-banner-close{
     height: 90px;
     width: 16px;
-    margin-right: 34px;
+    margin-right: 29px;
     margin-top: 15px;
     /* z-index: 4; */
     cursor: pointer;
@@ -57,4 +58,15 @@
     height: 16px;
     filter: invert(100%);
     /* z-index: 4; */
+}
+
+/* Tablet and larger */
+@media only screen and (min-width: 768px){
+    .floating-banner{
+        bottom: 20px;
+        right: 20px;
+    }
+    .floating-banner .floating-banner-paragraph p{
+        font-size: 1.1rem;
+    }
 }
